# wal-rs

./: Cargo.toml  README.md
examples/: wal.rs
src/: lib.rs
src/config/: mod.rs
src/fileext/: allocate.rs  fileext_unix.rs  fileext_win.rs  mod.rs
src/mock/: mod.rs
src/segment/: mod.rs  overhead.rs  tests.rs
src/wal/: cursor.rs  mod.rs  tests.rs
