[package]
name = "wal-rs"
description = """
    Write-ahead-log implementation
"""
version = "1.0.2"
authors = ["dtynn <dtynn@163.com>"]
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/dtynn/wal-rs"
documentation = "https://docs.rs/wal-rs"
repository = "https://github.com/dtynn/wal-rs"
keywords = ["wal", "disk", "file", "write-ahead-log", "persistence"]
categories = ["filesystem"]

[[example]]
name = "wal"

[dependencies]
crc = "1.8"
byteorder = "1.2"
hex = "0.3"
fs2 = "0.4"

[dev-dependencies]
rand = "0.5"

